refactor: Декомпозировать тесты с помощью вложенных тестов